--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="cardview_padding">4dp</dimen>
     <dimen name="textViews">24sp</dimen>
     <dimen name="appBar_elevation">4dp</dimen>
+    <dimen name="margin_top">5dp</dimen>
+    <dimen name="padding_top">25dp</dimen>
 </resources>
