--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,10 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.selumobileapps.puppies.ContactActivity">
 
-    <include android:id="@+id/actionBar"
-        layout="@layout/action_bar">
-    </include>
+    <android.support.design.widget.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/appBar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+        <include android:id="@+id/actionBar"
+            layout="@layout/action_bar">
+        </include>
+
+    </android.support.design.widget.AppBarLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +25,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_below="@+id/actionBar"
+        android:layout_below="@+id/appBar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -64,8 +72,7 @@
                 android:id="@+id/etDescription"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text"
-                android:singleLine="false" />
+                android:inputType="textMultiLine" />
 
         </android.support.design.widget.TextInputLayout>
 
