--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.selumobileapps.puppies.MainActivity">
 
-    <include android:id="@+id/actionBar"
-        layout="@layout/action_bar">
-    </include>
+    <android.support.design.widget.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/appBar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <include android:id="@+id/actionBar"
+            layout="@layout/action_bar">
+        </include>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPuppies"
@@ -18,6 +26,6 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_below="@+id/actionBar"
+        android:layout_below="@+id/appBar"
         />
 </RelativeLayout>
