--- a/app/src/main/res/layout/cardview_gallery.xml
+++ b/app/src/main/res/layout/cardview_gallery.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/gallery_image"
+            android:layout_height="@dimen/gallery_image"
             android:padding="@dimen/activity_vertical_margin"
             android:layout_gravity="center"
             app:srcCompat="@drawable/puppy"
@@ -40,8 +40,8 @@
                 android:textSize="@dimen/textView" />
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/bone_image"
+                android:layout_height="@dimen/bone_image"
                 android:gravity="left"
                 android:layout_gravity="left"
                 android:paddingLeft="@dimen/margin_top"
