--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -19,4 +19,10 @@
         android:orderInCategory="300"
         app:showAsAction="never"
         />
+    <item android:id="@+id/itemSettings"
+          android:title="@string/itemSettings"
+          android:orderInCategory="400"
+          app:showAsAction="never"
+        />
+
 </menu>
